# servercc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cc  restpp_demo.cc  servercc.h
demos/: distributed_demo.cc  multicast_client_demo.cc  tcp_client_demo.cc  tcp_server_demo.cc  udp_server_demo.cc
include/: servercc.h
llhttp/: CMakeLists.txt
request/: CMakeLists.txt
request/src/: request.cc  request.hh
response/: CMAkeLists.txt  CMakeLists.txt
response/src/: response.cc  response.hh
restpp/: main.cc
restpp/server/: CMakeLists.txt
restpp/server/src/: server.cc  server.hh
router/: CMakeLists.txt
router/handler/: CMakeLists.txt
router/handler/src/: handler.cc  handler.hh
router/request/: CMakeLists.txt
router/src/: router.cc  router.hh
server/: CMakeLists.txt
server/request/: CMakeLists.txt
server/request/src/: request.cc  request.hh
server/router/handler/src/: handler.cc
server/router/src/: router.cc
server/src/: server.cc  server.hh
servercc/clients/: CMakeLists.txt  clients.h
servercc/clients/include/: client.h  multicast_client.h  tcp_client.h
servercc/clients/src/: multicast_client.cc  tcp_client.cc
servercc/connector/: CMakeLists.txt
servercc/connector/src/: connector.cc
servercc/connectors/: CMakeLists.txt  README.md  connectors.h
servercc/connectors/include/: channel_types.h  connector.h  connector_types.h  internal_channel.h  internal_channel_manager.h  internal_request.h
servercc/connectors/src/: connector.cc  internal_channel.cc  internal_channel_manager.cc
servercc/distributed/: CMakeLists.txt  distributed.h
servercc/distributed/include/: distributed_server.h
servercc/distributed/src/: distributed.cc  distributed_server.cc
servercc/servers/: CMakeLists.txt  servers.h
servercc/servers/include/: server.h  tcp_request.h  tcp_server.h  udp_request.h  udp_server.h
servercc/servers/src/: tcp_request.cc  tcp_server.cc  udp_request.cc  udp_server.cc
servercc/types/: CMakeLists.txt  README.md  types.h
servercc/types/include/: macros.h  message.h  message_body.h  message_header.h  protocols.h  request.h
servercc/types/src/: message.cc
src/client/: CMakeLists.txt  README.md
src/client/include/: client.h
src/client/src/client_types/: CMakeLists.txt
src/client/src/client_types/include/: abstract_client.h  client_types.h
src/client/src/multicast_client/: CMakeLists.txt
src/client/src/multicast_client/include/: multicast_client.h
src/client/src/multicast_client/src/: multicast_client.cc
src/client/src/tcp_client/: CMakeLists.txt
src/client/src/tcp_client/include/: tcp_client.h
src/client/src/tcp_client/src/: tcp_client.cc
src/client/src/udp/: CMakeLists.txt
src/client/src/udp_client/: CMakeLists.txt
src/client/src/udp_client/include/: udp_client.h
src/client/src/udp_client/src/: udp_client.cc
src/connector/: CMakeLists.txt
src/connector/include/: connector.h  connector_request.h
src/connector/src/: connector.cc
src/distributed/: CMakeLists.txt  README.md
src/distributed/include/: distributed.h  distributed_protocols.h  message_queue.h
src/distributed/src/: distributed.cc  message_queue.cc
src/server/: CMakeLists.txt  README.md
src/server/include/: server.h  server_mode.h  server_request.h
src/server/src/: defaults.h  server.cc
src/server/src/config/: CMakeLists.txt
src/server/src/config/include/: defaults.h  server_request.h
src/server/src/server_config/: CMakeLists.txt
src/server/src/server_config/include/: server_defaults.h
src/server/src/server_types/: CMakeLists.txt
src/server/src/server_types/include/: abstract_server.h  server_mode.h  server_request.h  server_types.h
src/server/src/tcp/: CMakeLists.txt
src/server/src/tcp/include/: tcp.h
src/server/src/tcp/src/: tcp.cc
src/server/src/tcp_server/: CMakeLists.txt
src/server/src/tcp_server/include/: tcp_server.h
src/server/src/tcp_server/src/: tcp_server.cc
src/server/src/types/: CMakeLists.txt
src/server/src/types/include/: server_request.h
src/server/src/udp/include/: udp.h
src/server/src/udp/src/: udp.cc
src/server/src/udp_server/: CMakeLists.txt
src/server/src/udp_server/include/: udp_server.h
src/server/src/udp_server/src/: udp_server.cc
src/types/: README.md
src/types/include/: request.h
util/logger/: CMakeLists.txt
util/logger/src/: logger.cc  logger.hh
